syntax = "proto3";

package hfcms.users.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/hi20160616/hfcms-users/api/users/v1;v1";

service RolesAPI {
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse) {
    option (google.api.http) = {
      get: "/v1/roles"
    };
  }
  rpc GetRole(GetRoleRequest) returns (Role) {
    option (google.api.http) = {
      get: "/v1/{name=roles/*}"
    };
  }
  rpc CreateRole(CreateRoleRequest) returns (Role) {
    option (google.api.http) = {
      post: "/v1/roles"
      body: "role"
    };
  }
  rpc UpdateRole(UpdateRoleRequest) returns (Role) {
    option (google.api.http) = {
      patch: "/v1/{role.name=roles/*/update}"
      body: "role"
    };
  }
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=roles/*/delete}"
    };
  }
}

message ListRolesRequest {
  // The parent resource name
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListRolesResponse {
  repeated Role roles = 1;
  string next_page_token = 2;
}

message GetRoleRequest {
  string name = 1;
}

message CreateRoleRequest {
  string name = 1;
  Role role = 2;
}

message UpdateRoleRequest {
  Role role = 1;
}

message DeleteRoleRequest {
  string name = 1;
}

message Role{
  string name = 1;
  int32 role_id = 2;
  int32 parent_id = 3;
  string role_code = 4;
  string role_name = 5;
  string description = 6;
  int32 state = 7;
  int32 deleted = 8;
  google.protobuf.Timestamp update_time = 9;
}
